--- a/template/template1.html
+++ b/template/template1.html
@@ -470,7 +470,23 @@
 								<ul id="menu-menu-1" class="nav navbar-nav">
 									<li class="active menu-home"><a href="index.htm">Home</a></li>
 									<li class="menu-publications"><a href="publications/index.htm">Publications</a></li>
-									<li class="dropdown menu-teaching"><a href="textbook/index.htm">Textbook</a></li>
+									<li class="dropdown menu-teaching"><a href="teaching/index.htm"
+											class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown"
+											data-target="#">Teaching <span class="nav-down-bracket"
+												aria-hidden="true"><svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+													xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32"
+													viewbox="0 0 32 32">
+													<path
+														d="M15.688 22.438l-10.5-10.5 1.375-1.313 9.125 9.125 9.75-9.75 1.375 1.313z">
+													</path>
+												</svg></span></a>
+										<ul class="dropdown-menu">
+											<li class="menu-courses"><a href="courses/index.htm">Courses</a></li>
+											<li class="menu-textbook-recommendations"><a
+													href="textbook-recommendations/index.htm">Textbook
+													recommendations</a></li>
+										</ul>
+									</li>
 									<li class="dropdown menu-personal"><a href="personal/index.htm"
 											class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown"
 											data-target="#">Personal <span class="nav-down-bracket"
