--- a/template/template4.html
+++ b/template/template4.html
@@ -506,8 +506,7 @@
 											<li class="menu-drawing"><a href="../../../personal/drawing/index.htm">Drawing</a>
 											</li>
 											<li class="menu-finger-style-guitar"><a
-													href="../../../personal/finger-style-guitar/index.htm">Finger style
-													guitar</a></li>
+													href="../../../personal/finger-style-guitar/index.htm">Music</a></li>
 										</ul>
 									</li>
 <!--									<li class="menu-contact"><a href="contact/index.htm">Contact</a></li>-->
